--- a/infrastructure.yaml
+++ b/infrastructure.yaml
@@ -7,15 +7,25 @@ Parameters:
     Type: String
     Default: 10.0.0.0/16
   
-  PublicSubnetCidr:
-    Description: CIDR block for the public subnet
+  PublicSubnet1Cidr:
+    Description: CIDR block for the first public subnet
     Type: String
     Default: 10.0.1.0/24
   
-  PrivateSubnetCidr:
-    Description: CIDR block for the private subnet
+  PublicSubnet2Cidr:
+    Description: CIDR block for the second public subnet
     Type: String
     Default: 10.0.2.0/24
+  
+  PrivateSubnet1Cidr:
+    Description: CIDR block for the first private subnet
+    Type: String
+    Default: 10.0.3.0/24
+
+  PrivateSubnet2Cidr:
+    Description: CIDR block for the second private subnet
+    Type: String
+    Default: 10.0.4.0/24
 
 Resources:
   # VPC
@@ -44,28 +54,51 @@ Resources:
       VpcId: !Ref VPC
       InternetGatewayId: !Ref InternetGateway
 
-  # Public Subnet
-  PublicSubnet:
+  # Public Subnet 1
+  PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      CidrBlock: !Ref PublicSubnetCidr
+      CidrBlock: !Ref PublicSubnet1Cidr
       AvailabilityZone: !Select [0, !GetAZs '']
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: AutoScalingLabPublicSubnet
+          Value: AutoScalingLabPublicSubnet1
 
-  # Private Subnet
-  PrivateSubnet:
+  # Public Subnet 2
+  PublicSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      CidrBlock: !Ref PrivateSubnetCidr
+      CidrBlock: !Ref PublicSubnet2Cidr
+      AvailabilityZone: !Select [1, !GetAZs '']
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: AutoScalingLabPublicSubnet2
+
+  # Private Subnet 1
+  PrivateSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: !Ref PrivateSubnet1Cidr
       AvailabilityZone: !Select [0, !GetAZs '']
       Tags:
         - Key: Name
-          Value: AutoScalingLabPrivateSubnet
+          Value: AutoScalingLabPrivateSubnet1
+
+  # Private Subnet 2
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: !Ref PrivateSubnet2Cidr
+      AvailabilityZone: !Select [1, !GetAZs '']
+      Tags:
+        - Key: Name
+          Value: AutoScalingLabPrivateSubnet2
 
   # Public Route Table
   PublicRouteTable:
@@ -85,14 +118,21 @@ Resources:
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway
 
-  # Associate Public Subnet with Public Route Table
-  PublicSubnetRouteTableAssociation:
+  # Associate Public Subnet 1 with Public Route Table
+  PublicSubnet1RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      SubnetId: !Ref PublicSubnet
+      SubnetId: !Ref PublicSubnet1
       RouteTableId: !Ref PublicRouteTable
 
-  # NAT Gateway in Public Subnet
+  # Associate Public Subnet 2 with Public Route Table
+  PublicSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet2
+      RouteTableId: !Ref PublicRouteTable
+
+  # NAT Gateway in Public Subnet 1
   NatGatewayEIP:
     Type: AWS::EC2::EIP
     Properties:
@@ -103,8 +143,8 @@ Resources:
     Type: AWS::EC2::NatGateway
     Properties:
       AllocationId: !GetAtt NatGatewayEIP.AllocationId
-      SubnetId: !Ref PublicSubnet
-    DependsOn: PublicSubnetRouteTableAssociation
+      SubnetId: !Ref PublicSubnet1
+    DependsOn: PublicSubnet1RouteTableAssociation
 
   # Private Route Table
   PrivateRouteTable:
@@ -124,11 +164,18 @@ Resources:
       NatGatewayId: !Ref NatGateway
     DependsOn: NatGateway
 
-  # Associate Private Subnet with Private Route Table
-  PrivateSubnetRouteTableAssociation:
+  # Associate Private Subnet 1 with Private Route Table
+  PrivateSubnet1RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      SubnetId: !Ref PrivateSubnet
+      SubnetId: !Ref PrivateSubnet1
+      RouteTableId: !Ref PrivateRouteTable
+
+  # Associate Private Subnet 2 with Private Route Table
+  PrivateSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet2
       RouteTableId: !Ref PrivateRouteTable
 
   # Security Group for ALB
@@ -168,7 +215,8 @@ Resources:
       Name: AutoScalingLabALB
       Scheme: internet-facing
       Subnets:
-        - !Ref PublicSubnet
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
       SecurityGroups:
         - !Ref ALBSecurityGroup
       Tags:
@@ -300,7 +348,8 @@ Resources:
       MaxSize: 4
       DesiredCapacity: 1
       VPCZoneIdentifier:
-        - !Ref PrivateSubnet
+        - !Ref PrivateSubnet1
+        - !Ref PrivateSubnet2
       TargetGroupARNs:
         - !Ref ALBTargetGroup
       Tags:
